--- a/main.html
+++ b/main.html
@@ -2,9 +2,25 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Sarang Store</title>
 </head>
 <body>
+    <header>
+        <div class="container">
+
+            <p>Sarang Store</p>
+
+            <nav>
+                <a href = “#í”>Inicio</a>
+                <a href = “#í”>Tienda</a>
+                <a href = “#í”>Comunicate</a>                
+            </nav>
+                
+        </div>        
+    </header>
+
+    <div ></div>
     
 </body>
 </html>
