Using CSS by first time

--- a/main.html
+++ b/main.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>Sarang Store</title>
 </head>
+
 <body>
+
     <header>
-        <div class="container">
+        <div class="Contenedor">
 
             <p>Sarang Store</p>
 
@@ -20,7 +23,29 @@
         </div>        
     </header>
 
-    <div ></div>
+    <section id="Hero">
+        <p>Sarang <br> Store</p>
+        <button>Contactanos</button>
+    </section>
+
+    <section id="Productos">
+
+        <div id="Camisas">
+            <img src="images/Camisas.png" alt="Camisas">
+            <p>Camisas</p>
+        </div>
+            
+        <div id="Pantalones">
+            <img src="images/Pantalones.png" alt="Pantalones">
+            <p>Pantalones</p>
+        </div>
+
+    </section>
+
+    <footer>
+        Bucaramanga-Colombia
+    </footer>
     
 </body>
+
 </html>
