--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/icon.ico">
     <title>Sarang Store</title>
 </head>
 
@@ -12,7 +13,7 @@
     <header>
         <div class="Contenedor">
 
-            <p><h1><a href="main.html">Sarang Store</a></h1></p>
+            <p><h1><a href="index.html">Sarang Store</a></h1></p>
             
 
             <nav>
